--- a/html/index.html
+++ b/html/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en">
 
 <head>
-    <title>FarPi.</title>
+    <title>FarPi</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
     <script src="/js/farpi.js"></script>
     <link rel="stylesheet" href="/css/farpi.css">
     
 </head>
-<body onload="onLoad();">
+<body onload="FarPi.onLoad('ws://localhost:8888/farpi');">
 
-<div id="title">-        F        a        r        P        i        -</div>
+<div id="title">- FarPi -</div>
+<hr />
 <center>
 <div>
     <strong>Message to Send:</strong>&nbsp;<input type="text" id="msg" />
-    &nbsp;<input type="button" onclick="sendMsg();" value="Send" />
+    &nbsp;<input type="button" onclick="FarPi.sendMsg();" value="Send" />
 </div>
 <div id="message_content">{{message_content}}</div>
 </center>
