Started working to get the FarPi UI recreated in Angular

--- a/farpi2/src/index.html
+++ b/farpi2/src/index.html
@@ -6,6 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    
+    /* .full-height {
+      height: 100%;
+      background: yellow;
+    } */
+    </style>
 </head>
 <body>
   <app-root></app-root>
