--- a/marvin_ui2/src/index.html
+++ b/marvin_ui2/src/index.html
@@ -9,6 +9,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+    html, body {
+      height: 100vh;
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body class="mat-app-background mat-typography">
