--- a/marvin_ui_yew/index.html
+++ b/marvin_ui_yew/index.html
@@ -3,5 +3,6 @@
     <head>
         <meta charset="utf-8" />
         <title>Yew App</title>
+        <link data-trunk href="./css/final.css" rel="css" />
     </head>
 </html>
