--- a/marvin_ui_yew/index.html
+++ b/marvin_ui_yew/index.html
@@ -2,7 +2,7 @@
 <html data-theme="luxury">
     <head>
         <meta charset="utf-8" />
-        <title>Yew App</title>
+        <title>FarPi</title>
         <link data-trunk href="./css/final.css" rel="css" />
     </head>
 </html>
